--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
-    "semantic-ui": "^2.1.8"
+    "semantic-ui": "^2.1.8",
+    "semantic-ui-react": "^0.56.5"
   },
   "repository": {
     "type": "git",
