--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   "presets": [
     "es2015",
-    "react"
+    "react",
+    "stage-0",
+    "stage-2"
+],
+"plugins": [
+  "transform-regenerator",
+  "transform-runtime"
   ]
 }
