--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "Daniel França",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.9.1",
+    "babel-core": "^6.18.0",
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
     "eslint": "^2.11.1",
     "html-webpack-plugin": "^2.19.0",
     "webpack": "^1.13.1",
@@ -26,6 +30,8 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "semantic-ui": "^2.1.8",
     "semantic-ui-react": "^0.56.5"
   },
