--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "babel-runtime": "^6.18.0",
     "eslint": "^2.11.1",
     "html-webpack-plugin": "^2.19.0",
     "webpack": "^1.13.1",
