--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-runtime": "^6.18.0",
     "eslint": "^2.11.1",
     "html-webpack-plugin": "^2.19.0",
+    "reactotron-react-js": "^1.3.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
